0.6.0
Fixed toggle bookmark.
Fixed bookmark menu width prefs.
Added clipboard plugin.
Done calling plugrun functions on all plugins at certain poiints ( save/load/switch page etc ).
Fixed current session not being changed.
Changed session file format use:sed -i '1a 50 50 800 600\n#RESERVED\n#RESERVED\n#RESERVED' ~.KKEditQT/sesssions/Session-1 to convert session file ( change 'Session-1' to suit ).
Gui fixes for jumping to book mark.
Fixed passing hex/octal/decimal number to -key.
Changed restore short option from -s to -r.
Fixed tab visisiblity when saving/restoring sessions.
Done runtool msg.
Done selecttabbylabel msg.
Done selecttab msg.
Done search for define msg.
Done gotoline msg.
kkeditmsg now accepts hex/decimal/octal numbers for key.
Added kkeeditqtmsg.
Started scripting.
Done autosave session.
Added theme to 'View' menu.
Updated theme json files.
Fixed turning off syntax highlighting from view menu.
Added json lang plug.
Added variables colour to themes.
Added java lang plug.
Code clean in lang plugs.
Added PHP language plugin.
Added javascript language plugin.
Added html language plugin.
Switched to sytntax highlighting plugins.

0.5.3
Languages installed in ~/.KKEditQT/langplugins now take precedence.
Fixed languages that g=have no multi line comment.
Fixed marking document dirty if changing highlighting.
Fixed ste syntax language in tab menu.
Added makefile language plugin.
Added red ( root ) theme.
Added grey theme.
Lanuage plugins code clean.
Added "lanuageextra" styling to style files.
Fixed multi line comment having start/end patterns the same.
Added python lang plugin.
New format for language plugs.
Include mime types in lang plugs.
Added sh language file.
Fixed setting bookmark on empty line.
Done plain text.
Redone plugin .pro files so per user install work.
Added theme files.
Started language plugins ( uncomment kkedit-includes.h>#define _USEPLUGINS_ to use ).

0.5.2
Minor makefile changes.
Added about qt menu item.
Done plugin prefs.