@@ -1,4 +1,5 @@
 0.6.0
+Redone find/replace/replace all/, also in multiple files, wrap etc, TODO backwards.
 Fixed toggle bookmark.
 Fixed bookmark menu width prefs.
 Added clipboard plugin.
